examples/test/testpolicy18106.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18106
  namespace: namespace18
spec:
  podSelector:
    matchLabels:
      key39: value29
      key11: value35
      key46: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value17
          key15: value25
          key35: value15
